# aerodrome_wtf

./: .env  Cargo.toml  readme.md
script/: helper.sol
src/: abi.rs  main.rs  maths.rs
